--- a/styles/index.less
+++ b/styles/index.less
@@ -15,6 +15,8 @@
 .calendar {
   .calendar-event {
     background-color: @brand-success;
+    cursor: pointer;
+
     &.rc-Day--current {
       background-color: @brand-warning;
       &:hover {
